--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -1,58 +1,74 @@
 .con {
   background-color: #000000;
-  min-height: 100vh;
+  height: 100vh; /* min-height:100vh */
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.fir-con {
-  background-color: #2c364c;
-  width: 70%;
+.form-con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  border-radius: 8px;
+  width: 100%;
+  max-width: 450px;
+  background-color: #202020;
 }
 
 .login-website-logo {
-  width: 150px;
-  height: 100px;
+  width: 90px;
+  padding-bottom: 20px;
 }
 
 .input-con {
-  align-self: flex-start;
-  margin-left: 20px;
-  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 90%;
 }
 
 .label-text {
+  margin-bottom: 0px;
+  font-weight: bold;
+  line-height: 16px;
   color: #ffffff;
   font-size: 20px;
   font-family: 'Roboto';
 }
 
 .input-text {
-  color: #7e858e;
+  color: #ffffff;
   font-size: 20px;
   font-family: 'Roboto';
-  width: 100%;
-  border: 1px solid #f8fafc;
+  padding: 8px 16px 8px 16px;
+  border-radius: 2px;
   background-color: transparent;
+  border: 1px solid #6366f1;
+  outline: none;
+  height: 40x;
 }
-.form-con {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+
 .login-button {
   background-color: #4f46e5;
   color: #ffffff;
-  font-size: medium;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-family: 'Roboto';
   border: none;
   outline: none;
   cursor: pointer;
+  height: 40px;
+  width: 90%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .invalid-para {
   color: #ff0b37;
   font-size: 10px;
+  align-self: flex-start;
+  margin-bottom: 0px;
+  line-height: 16px;
 }
