--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,51 +1,152 @@
-.head-main-con {
-  width: 100%;
-  background-color: #475569;
+.nav-header {
+  background-color: #202020;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-.header-con {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
   align-items: center;
   width: 90%;
+  max-width: 1110px;
+  padding: 15px 0px 25px 0px;
 }
 
-.header-website-logo {
-  width: 100px;
-  height: 50px;
+.nav-bar-mobile-logo-con {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.header-link-con {
+@media screen and (min-width: 768px) {
+  .nav-bar-mobile-logo-con {
+    display: none;
+  }
+}
+
+.nav-bar-mobile-icons-con {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-bar-mobile-icons-con {
+    border: none;
+  }
+}
+
+.nav-bar-large-con {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1110px;
+}
+
+@media screen and (max-width: 767px) {
+  .nav-bar-large-con {
+    display: none;
+  }
+}
+
+.website-logo {
+  width: 90px;
+  margin-top: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .website-logo {
+    width: 125px;
+  }
+}
+
+.nav-menu {
   display: flex;
   flex-direction: row;
-  width: 20%;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: center;
+  list-style-type: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.header-button {
+@media screen and (max-width: 767px) {
+  .nav-menu {
+    display: none;
+  }
+}
+
+.nav-content {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.nav-menu-item {
+  font-family: 'Roboto';
+  text-decoration: none;
+  margin: 10px;
+  font-weight: 400;
+  font-size: 16px;
+}
+.nav-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.logout-btn {
   background-color: #4f46e5;
   color: #ffffff;
   font-size: 20px;
+  font-weight: 600;
   padding: 10px;
   border: none;
   outline: none;
   cursor: pointer;
   border-radius: 7px;
+  font-family: 'Roboto';
 }
 
-.nav-item {
-  text-decoration: none;
+@media screen and (max-width: 767px) {
+  .logout-btn {
+    display: none;
+  }
+}
+
+.nav-bar-mobile-con {
+  display: flex;
+
+  align-items: center;
+  list-style-type: none;
+}
+
+.nav-mobile-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
+  border: none;
   outline: none;
   cursor: pointer;
 }
 
-.para {
+@media screen and (min-width: 768px) {
+  .nav-mobile-btn {
+    display: none;
+  }
+}
+
+.nav-item-mobile-link {
+  font-size: 24px;
   color: #ffffff;
-  font-size: 20px;
-  font-family: 'Roboto';
-  list-style-type: none;
+  margin-right: 20px;
 }
