--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -2,10 +2,10 @@
   background-color: #000000;
   flex-grow: 1;
   padding: 40px;
+  min-height: 100vh;
 }
 
 .job-item-container {
-  list-style-type: none;
   background-color: #272727;
   padding: 5px;
   border-radius: 10px;
@@ -102,7 +102,7 @@
   font-family: 'Roboto';
 }
 
-.job-details-lolader {
+.job-details-loader {
   display: flex;
   flex-direction: row;
   justify-content: center;
